<resources>
    <string name="app_name">Wobly</string>
    <string name="ImageDescription">remove error</string>
    <string name="Taketest">Take test</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="react_desc">Tap the purple box as soon as it turns green</string>
    <string name="Visual_memory">Visual Memory</string>
    <string name="visual_memory_explination">Please memorise the animals below in the order</string>
    <string name="secondimage">Secondimage</string>
    <string name="thirdimage">ThirdImage</string>
    <string name="firstimage">FirstImage</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="tap_desc">Tap the circles according to the color displayed</string>
    <string name="select_images">Select the images in order</string>
    <string name="results_vmt">Correct</string>
    <string name="results_vmt0">INCORRECT</string>
    <string name="space"> </string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="codesubstitutiontext">Tap the number on they keypad corresponding to the letter displayed.</string>
    <string name="reactiontest">Reaction Test</string>
    <string name="screentaptest">Screen Tap Test</string>
    <string name="codesubstitution">Code Substitution Test</string>
    <string name="visualmemotest">Visual Memory Test</string>
    <string name="result">Results</string>
    <string name="walktest">Walking Test</string>
    <string name="sos">SOS</string>
    <string name="tips">Tips</string>
    <string name="walkinstruct">Please start walking after the countdown (Hold your phone in front of you in your right hand as you normally would)</string>
</resources>